--- a/style.css
+++ b/style.css
@@ -1,23 +1,34 @@
 main {
-  margin-top: 60px;
+  margin-top: 0px;
+  padding: 5px;
+  color:aliceblue;
+  margin-bottom: -100px;
+  background-image: url("images/download2.jpg");
+  background-size: cover;
+  background-position: center bottom;
+  background-repeat: no-repeat;
 }
 
 main h1 {
+  border:dotted 2px;
   margin: 0 10px;
   text-align: center;
   font-family: "Amatic SC", cursive;
-  font-size: 65px;
+  font-size: 60px;
+  
 }
 
 main h2 {
   margin: 18px 0 12px 0;
+  padding-bottom: 10px;
   border-bottom: 1px solid #5c4f41;
   font-family: "Special Elite", cursive;
-  font-size: 24px;
+  font-size: 35px;
 }
 
 main h3 {
   margin: 18px 0 12px 0;
+  padding-bottom: 10px;
   border-bottom: 1px solid #5c4f41;
   font-family: "Special Elite", cursive;
   font-size: 18px;
@@ -26,4 +37,54 @@ main h3 {
 main p {
   font-family: "Roboto", sans-serif;
   margin-top: 0;
+  font-family: "Special Elite", cursive;
+  font-size: 25px;
+  /* 1 pixel black shadow to left, top, right and bottom */
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+img {
+  border:solid 2px snow;
+  border-radius: 15px;
+}
+
+
+.group img {
+  width: 100%;
+}
+
+
+
+.group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 100px;
+}
+
+.item{
+  flex:1;
+  margin: 10px;
+}
+
+.item:last-child{
+  margin-right: 15px;
+}
+
+.item-double:last-child{
+  margin-right: 15px;
+}
+
+.item-double {
+  flex:1.5;
+  margin: 10px;
+}
+
+.bg-primary{
+  margin-bottom:-50px;
+}
+
+@media all and (min-width: 800px) {
+  .group{
+  flex-direction: row;
+  }
 }
